# Junles

./: README.md
video_kb_tool/: README.md  RELEASE_GUIDE.md  app_streamlit.py  build_desktop.py  build_windows.bat  desktop_app.py  launch_desktop.bat  launch_desktop.sh  pyproject.toml  requirements-packaging.txt  requirements.txt  run_desktop.bat  run_desktop.py  video_kb_tool.spec
video_kb_tool/packaging/windows/: README-WINDOWS.md  installer.iss
video_kb_tool/scripts/: build_windows_release.ps1  download_ffmpeg_placeholder.txt
video_kb_tool/src/video_kb_tool/: __init__.py  cli.py  downloader.py  env_check.py  graph_builder.py  kb_store.py  media.py  pipeline.py  runtime.py  settings.py  summarizer.py  transcriber.py  utils.py
video_kb_tool/tools/ffmpeg/: README.txt
